collector springmvc sample