@@ -8,6 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>war</packaging>
 
     <artifactId>j360-trace-example-springmvc</artifactId>
 
@@ -25,7 +26,6 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>me.j360</groupId>
@@ -59,4 +59,65 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <build>
+
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+        <plugins>
+            <!--dev环境jetty插件-->
+            <!-- jetty插件, 设定context path与spring profile -->
+            <!-- scanIntervalSeconds设置的是jetty自动扫描的间隔，单位秒 发现有改动自动更新部署，默认为0，即不扫描管理热部署工程。 -->
+            <!-- systemProperties 设置spring配置文件使用 development 开发环境配置 -->
+            <plugin>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <configuration>
+                    <systemProperties>
+
+                        <systemProperty>
+                            <name>org.mortbay.util.URI.charset</name>
+                            <value>UTF-8</value>
+                        </systemProperty>
+                    </systemProperties>
+                    <useTestClasspath>true</useTestClasspath>
+                    <webAppConfig>
+                        <contextPath>/</contextPath>
+                        <!--<defaultsDescriptor>${project.basedir}/src/test/resources/webdefault.xml
+                        </defaultsDescriptor>-->
+                    </webAppConfig>
+
+                    <reload>automatic</reload>
+                    <scanIntervalSeconds>0</scanIntervalSeconds>
+                     <jvmArgs>-Xms512m -Xmx1024m -XX:PermSize=512m -XX:MaxPermSize=512m
+                        -XX:+CMSClassUnloadingEnabled -XX:+PrintGCDetails -XX:+HeapDumpOnOutOfMemoryError
+                        -Dfile.encoding=UTF-8
+                    </jvmArgs>
+                    <connectors>
+                        <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+                            <port>8080</port>
+                            <maxIdleTime>60000</maxIdleTime>
+                        </connector>
+                    </connectors>
+
+                    <!--此处设置无用，直接用上面的filters-->
+                    <!--<scanTargetPatterns>
+                        <scanTargetPattern>
+                            <directory>src/main/webapp/WEB-INF</directory>
+                            <excludes>
+                                <exclude>**/*.jsp</exclude>
+                            </excludes>
+                            <includes>
+                                <include>src/main/filter/dev.properties</include>
+                            </includes>
+                        </scanTargetPattern>
+                    </scanTargetPatterns>-->
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
